[project]
name = "atomic-entities"
version = "0.1.0"
description = ""
authors = [
    {name = "Simon Zapalowicz",email = "s.zapalowicz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]


[tool.poetry.group.dev.dependencies]
sqlalchemy = "^2.0.41"
pymongo = "^4.13.2"
pandas = "^2.3.1"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
